syntax = "proto3";

package com.example.grpc.recordDataService;

option java_multiple_files = true;
option java_package = "com.example.grpc.recordDataService";
option java_outer_classname = "recordDataServiceProto";

service RegisterDataService {
  rpc sendRecordData(stream RecordSensorDataRequest) returns (RecordSensorDataResponse);
}

message RecordSensorDataRequest {
  int32 temperature = 1;
  int32 soilHumidity = 2;
  string dateTime = 3;
}

message RecordSensorDataResponse {
  string message = 1;
}